[MSE] YouTube videos fail to play https://bugs.webkit.org/show_bug.cgi?id=129525

Reviewed by Darin Adler.

Source/WebCore:

Test: media/media-source/media-source-fudge-factor.html

Add a very simple playability metric to SourceBuffer. Track the number of seconds buffered
and use that metric to determine whether the MediaSource has buffered enough data to play
through.

* Modules/mediasource/MediaSource.cpp:
(WebCore::MediaSource::currentTime): Added simple accessor.
(WebCore::MediaSource::monitorSourceBuffers): Replace the functor-based iterators with lambdas.
(WebCore::MediaSource::addSourceBuffer): Drive-by fix; only add new source buffers to the
    activeSourceBuffers list if those buffers are actually active.
* Modules/mediasource/MediaSource.h:
* Modules/mediasource/SourceBuffer.cpp:
(WebCore::SourceBuffer::SourceBuffer): Initialize new ivars.
(WebCore::SourceBuffer::sourceBufferPrivateDidReceiveSample): Measure the number of seconds buffered.
(WebCore::SourceBuffer::monitorBufferingRate): Use a simple Exponential moving average to
    track the buffering rate.
(WebCore::SourceBuffer::hasCurrentTime): Return true if the current time is within 1/24 s
    of a buffered range.
(WebCore::SourceBuffer::hasFutureTime): Moved from MediaSource.
(WebCore::SourceBuffer::canPlayThrough): Return true if the buffering rate is > 1s per
    second, or if the rate is sufficient to keep up over the remaining time.
* Modules/mediasource/SourceBuffer.h:

LayoutTests:

* media/media-source/media-source-addsourcebuffer.html: Updated.
* media/media-source/media-source-addsourcebuffer-expected.txt: Updated.
* media/media-source/media-source-fudge-factor-expected.txt: Added.
* media/media-source/media-source-fudge-factor.html: Added.

Canonical link: https://commits.webkit.org/147669@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@164999 268f45cc-cd09-0410-ab3c-d52691b4dbfc